--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "antd": "^4.6.1",
     "axios": "^0.20.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-emoji": "^0.5.0",
     "react-redux": "^7.2.1",
